Navigator refactor: + NavigatorModel.routes > NavigatorModel.pages + NavigatorModel.pages > NavigatorModel.stack + NavigatorPageModel > PageModel + Removed `Page` from mobile toolkit. Navigtor and TabContainer now wrap their content in an Onsen Page + Fixed mobile TabContainer className

--- a/mobile/cmp/tab/impl/Tabs.scss
+++ b/mobile/cmp/tab/impl/Tabs.scss
@@ -15,12 +15,19 @@
   }
 }
 
-.xh-tabbar {
-  &.xh-tabbar-top .tabbar {
+.xh-tab-page .page__content {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  transform: translateX(0);
+}
+
+.xh-tab-container {
+  &--top .tabbar {
     border-bottom: var(--xh-border-solid);
   }
 
-  &.xh-tabbar-bottom .tabbar {
+  &--bottom .tabbar {
     border-top: var(--xh-border-solid);
   }
 
